--- a/index.html
+++ b/index.html
@@ -119,7 +119,42 @@
             <div class="fortschritt" style="width: 60%"></div>
           </div>
         </div>
-        <!-- Weitere Kenntnisse hier einfügen -->
+        <div class="kenntnis">
+          <label>Microsoft Excel</label>
+          <div class="balken">
+            <div class="fortschritt" style="width: 40%"></div>
+          </div>
+        </div>
+        <div class="kenntnis">
+          <label>Microsoft PowerPoint</label>
+          <div class="balken">
+            <div class="fortschritt" style="width: 30%"></div>
+          </div>
+        </div>
+        <div class="kenntnis">
+          <label>HTML &amp; CSS</label>
+          <div class="balken">
+            <div class="fortschritt" style="width: 65%"></div>
+          </div>
+        </div>
+        <div class="kenntnis">
+          <label>C#</label>
+          <div class="balken">
+            <div class="fortschritt" style="width: 55%"></div>
+          </div>
+        </div>
+        <div class="kenntnis">
+          <label>Java</label>
+          <div class="balken">
+            <div class="fortschritt" style="width: 35%"></div>
+          </div>
+        </div>
+        <div class="kenntnis">
+          <label>JavaScript</label>
+          <div class="balken">
+            <div class="fortschritt" style="width: 45%"></div>
+          </div>
+        </div>
 
         <h4>Sprachkenntnisse</h4>
         <div class="kenntnis">
@@ -128,7 +163,18 @@
             <div class="fortschritt" style="width: 100%"></div>
           </div>
         </div>
-        <!-- Weitere Kenntnisse hier einfügen -->
+        <div class="kenntnis">
+          <label>Englisch</label>
+          <div class="balken">
+            <div class="fortschritt" style="width: 70%"></div>
+          </div>
+        </div>
+        <div class="kenntnis">
+          <label>Türkisch</label>
+          <div class="balken">
+            <div class="fortschritt" style="width: 90%"></div>
+          </div>
+        </div>
       </section>
 
       <!-- Projekte -->
@@ -140,100 +186,6 @@
       <!-- Unterlagen -->
       <section id="unterlagen">
         <h3>Unterlagen</h3>
-        <div id="arbeitszeugnis">
-          <img
-            src="Bilder/Arbeitszeugniss_Daimler_(2).png"
-            alt="arbeitszeugniss"
-            class="arbeitszeugniss-png"
-            onclick="showFullImage(this)"
-          />
-        </div>
-        <div id="other-documents">
-          <div id="projects">
-            <ul>
-              <li>
-                <img
-                  src="Bilder/small_0.png"
-                  alt="Bild 0"
-                  loading="lazy"
-                  onclick="showFullImage(this)"
-                />
-              </li>
-              <li>
-                <img
-                  src="Bilder/small_1.png"
-                  alt="Bild 1"
-                  loading="lazy"
-                  onclick="showFullImage(this)"
-                />
-              </li>
-              <li>
-                <img
-                  src="Bilder/small_2.png"
-                  alt="Bild 2"
-                  loading="lazy"
-                  onclick="showFullImage(this)"
-                />
-              </li>
-              <li>
-                <img
-                  src="Bilder/small_3.png"
-                  alt="Bild 3"
-                  loading="lazy"
-                  onclick="showFullImage(this)"
-                />
-              </li>
-              <li>
-                <img
-                  src="Bilder/small_4.png"
-                  alt="Bild 4"
-                  loading="lazy"
-                  onclick="showFullImage(this)"
-                />
-              </li>
-              <li>
-                <img
-                  src="Bilder/small_5.png"
-                  alt="Bild 5"
-                  loading="lazy"
-                  onclick="showFullImage(this)"
-                />
-              </li>
-              <li>
-                <img
-                  src="Bilder/small_6.png"
-                  alt="Bild 6"
-                  loading="lazy"
-                  onclick="showFullImage(this)"
-                />
-              </li>
-              <li>
-                <img
-                  src="Bilder/small_7.png"
-                  alt="Bild 7"
-                  loading="lazy"
-                  onclick="showFullImage(this)"
-                />
-              </li>
-              <li>
-                <img
-                  src="Bilder/small_8.png"
-                  alt="Bild 8"
-                  loading="lazy"
-                  onclick="showFullImage(this)"
-                />
-              </li>
-              <li>
-                <img
-                  src="Bilder/small_9.png"
-                  alt="Bild 9"
-                  loading="lazy"
-                  onclick="showFullImage(this)"
-                />
-              </li>
-            </ul>
-          </div>
-        </div>
       </section>
 
       <!-- Kontakt -->
@@ -315,9 +267,5 @@
         });
       });
     </script>
-   <!-- JavaScript für Teilnahmebescheinigung -->
-   
-  
-    
   </body>
 </html>
