--- a/index.html
+++ b/index.html
@@ -186,6 +186,32 @@
       <!-- Unterlagen -->
       <section id="unterlagen">
         <h3>Unterlagen</h3>
+        <div class="bild-container">
+          <div class="unterlagen-item">
+            <img
+              src="Bilder/bewerbung.deckblatt.png"
+              alt="deckblatt"
+              class="unterlagen-bild"
+            />
+            <p>Lebenslauf</p>
+          </div>
+          <div class="unterlagen-item">
+            <img
+              src="Bilder/Arbeitszeugniss_Daimler_(2).png"
+              alt="Referenzschreiben"
+              class="unterlagen-bild"
+            />
+            <p>Referenzschreiben</p>
+          </div>
+          <div class="unterlagen-item">
+            <img
+              src="Bilder/small_0.png"
+              alt="Teilnahmebescheinigung"
+              class="unterlagen-bild"
+            />
+            <p>Teilnahmebescheinigung</p>
+          </div>
+        </div>
       </section>
 
       <!-- Kontakt -->
