--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
         <div class="bild-container">
           <div class="unterlagen-item">
             <img
-              src="Bilder/bewerbung.deckblatt.png"
+              src="Bilder/bewerbung deckblatt.jpg"
               alt="deckblatt"
               class="unterlagen-bild"
             />
