--- a/index.html
+++ b/index.html
@@ -183,36 +183,39 @@
         <!-- Weitere Inhalte -->
       </section>
 
-      <!-- Unterlagen -->
-      <section id="unterlagen">
-        <h3>Unterlagen</h3>
-        <div class="bild-container">
-          <div class="unterlagen-item">
-            <img
-              src="Bilder/bewerbung deckblatt.jpg"
-              alt="deckblatt"
-              class="unterlagen-bild"
-            />
-            <p>Lebenslauf</p>
-          </div>
-          <div class="unterlagen-item">
-            <img
-              src="Bilder/Arbeitszeugniss_Daimler_(2).png"
-              alt="Referenzschreiben"
-              class="unterlagen-bild"
-            />
-            <p>Referenzschreiben</p>
-          </div>
-          <div class="unterlagen-item">
-            <img
-              src="Bilder/small_0.png"
-              alt="Teilnahmebescheinigung"
-              class="unterlagen-bild"
-            />
-            <p>Teilnahmebescheinigung</p>
-          </div>
-        </div>
-      </section>
+     <!-- Unterlagen -->
+<section id="unterlagen">
+  <h3>Unterlagen</h3>
+  <div class="bild-container">
+    <div class="unterlagen-item">
+      <a href="galerie.html" target="_blank">
+        <img
+          src="Bilder/bewerbung deckblatt.jpg"
+          alt="deckblatt"
+          class="unterlagen-bild"
+        />
+        <p>Lebenslauf</p>
+      </a>
+    </div>
+    <div class="unterlagen-item">
+      <img
+        src="Bilder/Arbeitszeugniss_Daimler_(2).png"
+        alt="Referenzschreiben"
+        class="unterlagen-bild"
+      />
+      <p>Referenzschreiben</p>
+    </div>
+    <div class="unterlagen-item">
+      <img
+        src="Bilder/small_0.png"
+        alt="Teilnahmebescheinigung"
+        class="unterlagen-bild"
+      />
+      <p>Teilnahmebescheinigung</p>
+    </div>
+  </div>
+</section>
+
 
       <!-- Kontakt -->
       <section id="kontakt">
